# Algorithm-Engineering

./: .clang-tidy  .gitignore  CMakeLists.txt
Assignments/Week 1/: CMakeLists.txt  Report_14th_slide.md  discussion.md  pi_monte_carlo.cpp  pi_monte_carlo_no_omp.cpp
Assignments/Week 10/: opinion.md  report_slide_11.md
Assignments/Week 11/: discussion.md  report_slide_11.md
Assignments/Week 12/: report_open_mp_cancellation_gpgpu_kernels_and_mpi.md
Assignments/Week 2/: CMakeLists.txt  explanation_performance_gains.md  pi_numerical_integration.cpp
Assignments/Week 3/: CMakeLists.txt  answers.md  pi_monte_carlo_lcg.cpp
Assignments/Week 4/: CMakeLists.txt  benchmark_report.md  benchmark_results.csv  discussion.md  min_max_quicksort.cpp  plot_benchmarks.py
Assignments/Week 5/: CMakeLists.txt
Assignments/Week 5/catch/: CMakeLists.txt
Assignments/Week 5/fizzbuzz/: CMakeLists.txt
Assignments/Week 5/fizzbuzz/include/: fizzbuzz.hpp
Assignments/Week 5/fizzbuzz/src/: fizzbuzz.cpp
Assignments/Week 5/fizzbuzz/tests/: test_fizzbuzz.cpp
Assignments/Week 5/quantpng/: CMakeLists.txt  Makefile  main.cpp
Assignments/Week 5/quantpng/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
Assignments/Week 5/quantpng/quantize/: CMakeLists.txt  COPYRIGHT  kmeans.c  libimagequant.c  libimagequant.h  mediancut.c  pam.h
Assignments/Week 6/: instruction_set_answers.md
Assignments/Week 7/: omp_simd_avx512.md
Assignments/Week 8/: discussion.md  latency_throughput_intrinsics.md  slide_6_report.md
Assignments/Week 9/: dicussion.md  memory_and_locality.md  report_side_4.md
paper/: README_SETUP.md  compile.sh  main.tex
paper/bibliography/: sources.bib
paper/sections/: abstract.tex  appendix.tex  background.tex  conclusion.tex  content.tex  implementedBinzMethod.tex  introduction.tex  systemarchitecture.tex
project/: .gitignore  CMakeLists.txt  README.md  content.md  paper.md  projectArchticure.md
project/data/: nick.ppm  nick_output.ppm
project/src/image/: colorspace.cpp  colorspace.h  image_gray.cpp  image_gray.h
project/src/io/: ppm_reader.cpp  ppm_reader.h  ppm_writer.cpp  ppm_writer.h  token_reader.cpp  token_reader.h
project/src/main/: main.cpp
project/src/ops/: background_estimate.cpp  background_estimate.h  background_remove.cpp  background_remove.h  border_cleanup.cpp  border_cleanup.h  contrast_stretch.cpp  contrast_stretch.h  denoise_median.cpp  denoise_median.h  morphology.cpp  morphology.h  threshold_nick.cpp  threshold_nick.h  threshold_otsu.cpp  threshold_otsu.h  threshold_proposed.cpp  threshold_proposed.h  threshold_sauvola.cpp  threshold_sauvola.h  threshold_su.cpp  threshold_su.h
project/src/util/: args_parser.cpp  args_parser.h  clamp.h  logging.cpp  logging.h  timing.cpp  timing.h
project/tests/: CMakeLists.txt
project/tests/io/: test_ppm_io.cpp
project/tests/ops/: test_background_estimate.cpp  test_background_remove.cpp  test_border_cleanup.cpp  test_contrast_stretch.cpp  test_median.cpp  test_morphology.cpp  test_nick.cpp  test_otsu.cpp  test_sauvola.cpp  test_threshold_proposed.cpp  test_threshold_su.cpp
